# B-Spline

./: .gitignore  CMakeLists.txt  README.MD  README.md
src/: BSpline.h  BSplineCurve.cpp  BSplineCurve.h  BSplineSurface.cpp  BSplineSurface.h  Camera.h  Config.h  Curve.cpp  Curve.h  Displayer.cpp  Displayer.h  Ellipsoid.h  Point.cpp  Point.h  Shader.h  Surface.cpp  Surface.h  Util.h  main.cpp
src/shader/: curve_line_f.glsl  curve_line_v.glsl  surface_f.glsl  surface_v.glsl
